change title and title slide

--- a/index.html
+++ b/index.html
@@ -10,33 +10,21 @@
 </head>
 <body class="shower list">
 	<header class="caption">
-		<h1>Open Webslides</h1>
-		<h2>VELOV conferentie 2017</h2>
+		<h1>Co-creatie via open webslides</h1>
+		<h2>OV COM 27 februari</h2>
 		<p>
-				<a href="https://www.linkedin.com/in/clio-janssens-399b716b">Dr. Clio Janssens</a> &
-				<a href="https://be.linkedin.com/in/estherdeloof">Dr. Esther De Loof</a>,
+				<a href="https://www.linkedin.com/in/clio-janssens-399b716b">Clio Janssens</a>,
 				<a href="http://www.ugent.be/">Universiteit Gent</a> en <a href="https://www.arteveldehogeschool.be/">Arteveldehogeschool</a>
-		</p>
-		<p>
-			Bekijk de <a href="Preview/">voorbereidende slides</a>.
 		</p>
 	</header>
 
 	<section class="black title slide" id="title">
 		<h2>Open Webslides</h2>
 		<p>
-			<a href="https://www.linkedin.com/in/clio-janssens-399b716b">Dr. Clio Janssens</a>
-			&amp;
-			<a href="https://be.linkedin.com/in/estherdeloof">Dr. Esther De Loof</a>
+			<a href="https://www.linkedin.com/in/clio-janssens-399b716b">Clio Janssens</a>
 			<span style="float: right">
-				<a href="http://bit.ly/velov2017">bit.ly/velov2017</a>
+				<a href="http://bit.ly/ovcomfeb">bit.ly/ovcomfeb</a>
 			</span>
-		</p>
-
-		<p>
-			WiFi netwerk: <strong>VELOV2017</strong>
-			<br>
-			WiFi code: <strong>Welkom@Velov2017!</strong>
 		</p>
 	</section>
 
