--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
 		<img src="images/projector.jpg" alt="[foto van een diaprojector]" class="cover">
 	</section>
 
+	<section class="slide" id="oit">
+		<h2>Onderwijs Innovatie Traject</h2>
+		<ul>
+			<li class="next">Gestuurd vanuit dienst onderwijsontwikkeling en internationalisering</li>
+			<li class="next">4 thema's</li>
+			<ul>
+					<li>Blended learning</li>
+					<li>Nexus onderzoek-onderwijs</li>
+					<li><strong>Learning by development</strong></li>
+					<li>Internationalisering</li>
+			</ul>
+		</ul>
+	</section>
+	
 	<section class="slide" id="powerpoint">
 		<h2>PowerPoint-slides zijn de nieuwe diaprojectors</h2>
 		<ul>
