al doende leren

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	<section class="slide" id="learning by development">
 		<h2>Learning by development</h2>
 		<ul>
+			<li class="next">Al doende leren</li>
 			<li class="next">Zelf actief leerstof vormgeven</li>
 			<li class="next">Projectwerk</li>
 			<li class="next">Vakoverschreidend</li>
