--- a/index.html
+++ b/index.html
@@ -87,15 +87,6 @@
 		</ul>
 	</section>
 	
-	<section class="black toc slide" id="toc">
-		<h2>Mogelijkheden van webslides</h2>
-		<ul>
-			<li><a href="#toc-share">Eenvoudig delen</a></li>
-			<li><a href="#toc-teachers">Co-creatie tussen docenten</a></li>
-			<li><a href="#toc-students">Co-creatie met studenten</a></li>
-			<li><a href="#toc-multimedia">Embedden van multimedia</a></li>
-		</ul>
-	</section>
 	
 	<section class="black toc slide" id="toc">
 		<h2>Mogelijkheden van webslides</h2>
@@ -282,6 +273,7 @@
 		<ul>
 			<li>Gebruiksvriendelijke editor</li>
 			<li>Integratie interactieve webtools</li>
+			<li>Overzetten powerpoint</li>
 			<li>Annotaties op slide-niveau</li>
 			<li>Eenvoudig co-cre&euml;eren</li>
 		</ul>
@@ -304,12 +296,27 @@
 		</ul>
 	</section>
 
-
+<section class="slide" id="teacher-advantages">
+		<h2>Voordelen voor lesgevers</h2>
+		<ul>
+			<li>beheer <strong>samen met collega’s</strong></li>
+			<li><strong>actuele slides</strong> door snelle updates
+				<ul>
+					<li>meerdere versies onderhouden is geen probleem meer</li>
+					<li>sterkere cursus</li>
+				</ul>
+			</li>
+			<li>eenvoudig gebruik van <strong>multimedia en web</strong></li>
+			<li><strong>kruisbestuiving</strong> tussen verschillende cursussen</li>
+			<li>bevorderen van <strong>activerend onderwijs</strong></li>
+		</ul>
+	</section>
 
 	<section class="slide" id="student-advantages">
 		<h2>Voordelen voor studenten</h2>
 		<ul>
-			<li>Webslides werken op <strong>ieder toestel</strong></li>
+			<li>Leren door <strong>co-creatie</strong></li>
+			<li>Deel <strong>annotaties</strong> met medestudenten</li>
 			<li>De discussie kan <strong>overal</strong> plaatsvinden
 				<ul>
 					<li>link naar slides vanop Facebook, Twitter…</li>
@@ -317,40 +324,11 @@
 			</li>
 			<li>Cursussen blijven meer <strong>up-to-date</strong></li>
 			<li><strong>Feedback</strong> geven is eenvoudig</li>
-			<li>Leren door <strong>co-creatie</strong></li>
-			<li>Deel <strong>annotaties</strong> met medestudenten</li>
+			<li>Webslides werken op <strong>ieder toestel</strong></li>		
 		</ul>
 	</section>
 
-	<section class="slide" id="teacher-advantages">
-		<h2>Voordelen voor lesgevers</h2>
-		<ul>
-			<li>eenvoudig gebruik van <strong>multimedia en web</strong></li>
-			<li>beheer <strong>samen met collega’s</strong></li>
-			<li><strong>actuele slides</strong> door snelle updates
-				<ul>
-					<li>meerdere versies onderhouden is geen probleem meer</li>
-				</ul>
-			</li>
-			<li><strong>(internationale) erkenning</strong> door publieke aanwezigheid
-				<ul>
-					<li>slides kunnen gedeeld worden op Twitter</li>
-					<li>internationale collega's kunnen linken naar slides en feedback geven</li>
-				</ul>
-			</li>
-		</ul>
-	</section>
-
-	<section class="slide" id="institute-advantages">
-		<h2>Voordelen voor de onderwijsinstelling</h2>
-		<ul>
-			<li><strong>kruisbestuiving</strong> tussen verschillende cursussen: multiperspectivisme
-			</li>
-			<li>bevorderen van <strong>activerend onderwijs</strong></li>
-			<li>grotere <strong>betrokkenheid</strong> van huidige en toekomstige studenten</li>
-			<li><strong>maatschappelijke</strong> valorisatie</li>
-		</ul>
-	</section>
+	
 
 	<div class="progress"></div>
 	<footer class="badge">
