--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 	</section>
 	
 	<section class="slide" id="input">
-		<blockquote><strong>Samen content creëren.</strong></blockquote>
+		<u1><strong>Samen content creëren.</strong></u1>
 		<img src="http://www.emsbrussel.be//EMS_Site/(3369)-Nederlands/Afbeeldingen-en-fotos-Images/Afbeeldingen-brochures/pgtenprojectwerk.jpg" 
-				 alt="[teamwork]" width="700" height="400">
+				 alt="[teamwork]" width="600" height="400">
 	</section>
 	
 	<section class="slide" id="didactisch">
@@ -91,10 +91,11 @@
 	<section class="slide" id="powerpoint2.0">
 		<h2>Webslides: efficiënte co-creatie van cursusmateriaal</h2>
 		<ul>
+			<li class="next"><strong>Input van studenten</strong> toevoegen kan met één klik.</li>
+			<li class="next"><strong>Linken</strong> naar <a href="https://rubenverborgh.github.io/WebFundamentals/architecture/">andere cursussen</a> is eenvoudig.</li>
 			<li class="next">Webslides kunnen alles wat <strong>websites</strong> kunnen.</li>
 			<li class="next">Webslides werken op <strong>alle toestellen</strong>, mobiel of vast.</li>
-			<li class="next"><strong>Linken</strong> naar <a href="https://rubenverborgh.github.io/WebFundamentals/architecture/">andere cursussen</a> is eenvoudig.</li>
-			<li class="next"><strong>Input van studenten</strong> toevoegen kan met één klik.</li>
+			
 		</ul>
 	</section>
 	
