--- a/index.html
+++ b/index.html
@@ -19,17 +19,13 @@
 	</header>
 
 	<section class="black title slide" id="title">
-		<h2>Open Webslides</h2>
+		<h2>Co-creatie via open webslides</h2>
 		<p>
 			<a href="https://www.linkedin.com/in/clio-janssens-399b716b">Clio Janssens</a>
 			<span style="float: right">
 				<a href="http://bit.ly/ovcomfeb">bit.ly/ovcomfeb</a>
 			</span>
 		</p>
-	</section>
-
-	<section class="slide" id="projector">
-		<img src="images/projector.jpg" alt="[foto van een diaprojector]" class="cover">
 	</section>
 
 	<section class="slide" id="oit">
@@ -91,7 +87,7 @@
 	<section class="slide" id="webslides oplossing">
 		<h2>Webslides</h2>
 		<ul>
-			<li class="next">ICT <strong>oplossing</strong> voor praktische en didactische problemen.</li>
+			<li class="next">ICT <strong>hulpmiddel</strong> voor praktische en didactische uitdagingen.</li>
 			<li class="next">Efficiënte co-creatie.</li>
 			<li class="next"><strong>Linken</strong> naar <a href="https://rubenverborgh.github.io/WebFundamentals/architecture/">andere cursussen</a> is eenvoudig.</li>
 		</ul>
@@ -159,17 +155,6 @@
 		</ul>
 	</section>
 
-	<section class="slide" id="praktisch opgelost">
-		<h2>Uitdagingen praktisch</h2>
-		<ul>
-			<li class="next"><strong>Efficiënt en overzichtelijk samenwerken</strong></li>
-			<li class="next"><strong>Controle</strong></li>
-			<li class="next"><strong>Automatische integratie input</strong></li>
-			<li class="next">Versatiele integratie multimedia</li>
-		</ul>
-	</section>
-	
-	
 	<section class="slide" id="praktisch multimedia">
 		<h2>Uitdagingen praktisch</h2>
 		<ul>
