--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 	<section class="slide" id="oit">
 		<h2>Onderwijs Innovatie Traject</h2>
 		<ul>
-			<li class="next">Gestuurd vanuit dienst onderwijsontwikkeling en internationalisering</li>
-			<li class="next">4 thema's</li>
+			<li>Gestuurd vanuit dienst onderwijsontwikkeling en internationalisering</li>
+			<li>4 thema's</li>
 			<ul>
 					<li>Blended learning</li>
 					<li>Nexus onderzoek-onderwijs</li>
@@ -53,10 +53,9 @@
 		</ul>
 	</section>
 	
-	<section class="slide" id="input">
+	<section class="slide" id="teamwork">
 		<u1><strong>Samen content creëren.</strong></u1>
-		<img src="http://www.emsbrussel.be//EMS_Site/(3369)-Nederlands/Afbeeldingen-en-fotos-Images/Afbeeldingen-brochures/pgtenprojectwerk.jpg" 
-				 alt="[teamwork]" width="600" height="400">
+		<img src="http://www.emsbrussel.be//EMS_Site/(3369)-Nederlands/Afbeeldingen-en-fotos-Images/Afbeeldingen-brochures/pgtenprojectwerk.jpg" alt="[teamwork]" width="600" height="400">
 	</section>
 	
 	<section class="slide" id="didactisch">
