--- a/index.html
+++ b/index.html
@@ -323,7 +323,14 @@
 		</ul>
 	</section>
 
-	
+	<section class="slide" id="student-advantages">
+		<h2>Meer weten?</h2>
+		<ul>
+			<li>Herbekijk deze slides via <a href="bit.ly/ovcomfeb">bit.ly/ovcomfeb</a></li>
+			<li>Website <a href="">UGent project</a>.</li>
+			<li>Neem contact op.</li>	
+		</ul>
+	</section>
 
 	<div class="progress"></div>
 	<footer class="badge">
