--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="shower list">
 	<header class="caption">
 		<h1>Co-creatie via open webslides</h1>
-		<h2>OV COM 27 februari</h2>
+		<h2>OV COM 27 februari 2017</h2>
 		<p>
 				<a href="https://www.linkedin.com/in/clio-janssens-399b716b">Clio Janssens</a>,
 				<a href="http://www.ugent.be/">Universiteit Gent</a> en <a href="https://www.arteveldehogeschool.be/">Arteveldehogeschool</a>
@@ -323,7 +323,7 @@
 		</ul>
 	</section>
 
-	<section class="slide" id="student-advantages">
+	<section class="slide" id="meer weten">
 		<h2>Meer weten?</h2>
 		<ul>
 			<li>Herbekijk deze slides via <a href="bit.ly/ovcomfeb">bit.ly/ovcomfeb</a></li>
