--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 		<h2>Meer weten?</h2>
 		<ul>
 			<li>Herbekijk deze slides via <a href="bit.ly/ovcomfeb">bit.ly/ovcomfeb</a></li>
-			<li>Website <a href="">UGent project</a>.</li>
+			<li>Website <a href="http://openwebslides.ugent.be/">UGent project</a>.</li>
 			<li>Neem contact op.</li>	
 		</ul>
 	</section>
