--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 	<section class="slide" id="meer weten">
 		<h2>Meer weten?</h2>
 		<ul>
-			<li>Herbekijk deze slides via <a href="bit.ly/ovcomfeb">bit.ly/ovcomfeb</a></li>
+			<li>Herbekijk deze slides via <a href="https://openwebslides.github.io/OIT_com/">bit.ly/ovcomfeb</a></li>
 			<li>Website <a href="http://openwebslides.ugent.be/">UGent project</a>.</li>
 			<li>Neem contact op.</li>	
 		</ul>
