--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
 		</ul>
 	</section>
 
-	<section class="black toc slide" id="toc">
+	<section class="black toc slide" id="toc2">
 		<h2>Mogelijkheden van webslides</h2>
 		<ul>
-			<li><a href="#toc-share">Eenvoudig delen</a></li>
-			<li><a href="#toc-teachers">Co-creatie tussen docenten</a></li>
-			<li><a href="#toc-students">Co-creatie met studenten</a></li>
-			<li><strong><a href="#toc-multimedia">Embedden van multimedia</a></strong></li>
+			<li>Eenvoudig delen</li>
+			<li>Co-creatie tussen docenten</li>
+			<li>Co-creatie met studenten</li>
+			<li><strong>Embedden van multimedia</strong></li>
 		</ul>
 	</section>
 	
