--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 	<section class="black toc slide" id="toc">
 		<h2>Mogelijkheden van webslides</h2>
 		<ul>
-			<li><a href="#toc-share">Eenvoudig delen</a></li>
-			<li><strong><a href="#toc-teachers">Co-creatie tussen docenten</a></strong></li>
-			<li><strong><a href="#toc-students">Co-creatie met studenten</a></strong></li>
-			<li><a href="#toc-multimedia">Embedden van multimedia</a></li>
+			<li>Eenvoudig delen</li>
+			<li><strong>Co-creatie tussen docenten</strong></li>
+			<li><strong>Co-creatie met studenten</strong></li>
+			<li>Embedden van multimedia</li>
 		</ul>
 	</section>
 	
